--- a/Tarea_03/Curriculum.html
+++ b/Tarea_03/Curriculum.html
@@ -2,35 +2,49 @@
   <meta charset="UTF-8">
   <title>Currículum</title>
   <style>
+    /* Paleta de colores azul */
+    :root {
+      --fondo: #eaf6fb;
+      --principal: #0a3d62;
+      --secundario: #3c6382;
+      --acento: #60a3bc;
+      --texto: #1e272e;
+      --blanco: #ffffff;
+    }
+
+    /* Estilos generales */
     body {
-      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: var(--fondo);
+      color: var(--texto);
       line-height: 1.6;
-      margin: 40px auto;
-      max-width: 800px;
-      padding: 0 20px;
-      background-color: #fdfdfd;
-      color: #333;
+      margin: 0;
+      padding: 40px 20px;
+    }
+
+    main {
+      max-width: 850px;
+      margin: auto;
+      background-color: var(--blanco);
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      padding: 40px;
     }
 
     h1, h2 {
-      color: #2c3e50;
-      margin-bottom: 10px;
+      color: var(--principal);
     }
 
     h1 {
-      font-size: 2.5em;
-      margin-top: 0;
+      font-size: 2.8em;
+      margin-bottom: 10px;
     }
 
     h2 {
-      border-bottom: 2px solid #3498db;
-      padding-bottom: 5px;
+      font-size: 1.6em;
+      border-left: 5px solid var(--acento);
+      padding-left: 10px;
       margin-top: 40px;
-      font-size: 1.5em;
-    }
-
-    p {
-      margin: 5px 0;
     }
 
     section {
@@ -39,25 +53,38 @@
 
     #datos_personales {
       text-align: center;
+      background-color: var(--acento);
+      color: var(--blanco);
+      padding: 20px;
+      border-radius: 8px;
       margin-bottom: 40px;
     }
 
-    #datos_personales p {
-      font-size: 1em;
-      color: #555;
+    #datos_personales h1 {
+      color: var(--blanco);
     }
+
+    #datos_personales p {
+      margin: 5px 0;
+    }
+
     ul {
+      list-style-type: disc;
       padding-left: 20px;
     }
 
     li {
-      margin-bottom: 5px;
+      margin-bottom: 8px;
     }
 
+    strong {
+      color: var(--secundario);
+    }
+
+    /* Responsive */
     @media (max-width: 600px) {
       body {
-        margin: 20px 10px;
-        font-size: 0.95em;
+        padding: 20px 10px;
       }
 
       h1 {
@@ -67,8 +94,16 @@
       h2 {
         font-size: 1.3em;
       }
+
+      main {
+        padding: 20px;
+      }
     }
   </style>
+    </section>
+  </main>
+</body>
+</html>
 </head>
 <body>
   <section id="datos_personales">
@@ -78,7 +113,7 @@
 
     <section id="Descripción">
     <h2>Descripción</h2>
-    <ul> Soy estudiante de tercer año de periodismo...
+    <ul> Soy estudiante de Comunicación Social, con experiencia en apoyo académico y liderazgo juvenil. Me destaco por ser organizada, responsable y con una actitud proactiva para aprender y adaptarme a nuevos desafíos. Disfruto trabajar en equipo y aportar en entornos colaborativos.
     </ul>
   </section>
 
